# ElPricesWebServer

./: .gitignore  CMakeLists.txt
FilesToServe/: index.html  input.html
example/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  DataController.cpp  ElPricesWebServerController.cpp  ElPricesWebServerController.h  HistoricEntry.h  main.cpp
src/include/ElPricesWebServer/: DataController.h  ElPricesWebServerController.h  EndPoint.h  IElPricesWebServer.h  ServePoint.h
